@@ -43,9 +43,8 @@ using namespace net;
 namespace bt
 {
 
-	
-	
 	static Uint32 peer_id_counter = 1;
+	bool Peer::resolve_hostname = true;
 	
 	
 	Peer::Peer(mse::StreamSocket* sock,const PeerID & peer_id,
@@ -100,6 +99,9 @@ namespace bt
 		}
 		pex_allowed = stats.extension_protocol;
 		utorrent_pex_id = 0;
+		
+		if (resolve_hostname)
+			QHostInfo::lookupHost(stats.ip_address,this,SLOT(resolved(QHostInfo)));
 	}
 
 
@@ -611,6 +613,22 @@ namespace bt
 	{
 		sock->setGroupIDs(up_gid,down_gid);
 	}
+		
+	void Peer::resolved(const QHostInfo& hinfo)
+	{
+		if (hinfo.error() != QHostInfo::NoError)
+			return;
+		
+		stats.hostname = hinfo.hostName();
+	}
+	
+	
+	void Peer::setResolveHostnames(bool on)
+	{
+		resolve_hostname = on;
+	}
+
+
 }
 
 #include "peer.moc"
